kubernetes/apps/monitoring/grafana/patches/grafana-datasource-sidecar.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  template:
    spec:
      containers:
        - name: datasource-sidecar
          image: kiwigrid/k8s-sidecar
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 50m
              memory: 50Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: grafana-datasources-provisioning
              mountPath: /tmp/datasource
