kubernetes/apps/monitoring/grafana/patches/grafana-security-context.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  template:
    spec:
      automountServiceAccountToken: true
      securityContext:
        runAsGroup: 65534
